--- a/site/templates/about.html
+++ b/site/templates/about.html
@@ -2,7 +2,7 @@
 <html>
 	<head>
 		<title>newsbin - about</title>
-		<link rel="stylesheet" type="text/css" href="/static/css/about.min.css" />
+		<link rel="stylesheet" type="text/css" href="/static/css/base/about.css" />
 	</head>
 	<body>
 		<div id="content">
@@ -10,17 +10,16 @@
 			<h1>welcome to newbin</h1>
 			<p>
 				This site fetches articles from a lot of different news sources, detects proper names in them, and tries to
-				annotate the articles with information about the people mentioned in them. What this means is that you can
-				click on names in the news and get a summary and other information about them.
+				annotate the articles with information about the people and places being discusses. What this means is that you can
+				click on names in the news and get immediate information about them in a sidebar.
 			</p>
 			<p>
 				If you see an annotation that is wrong, scroll to the bottom of the article and click the red minus-sign next
-				to it. If you think one is missing, highlight it in the text, and click the green plus-sign to add it.
+				to it. If you see an annotation that should be included, highlight it in the text and click yes on the notification.
 			</p>
 			<p>
 				You can select your sources, the number of results to return or search titles and content with plain string
-				or <a href="http://pythex.org/" target="_blank">regex</a> searches from the front page. You can also view a
-				log that dumps notifications from the engine as it fetches and parses articles. Enjoy.
+				or <a href="http://pythex.org/" target="_blank">regex</a> searches from the front page. <br/>Enjoy.
 			</p>
 			<p style="text-align:right;font-size:1.2em;">
 				- blackstampede
@@ -32,7 +31,6 @@
 					<a href="https://github.com/" target="_blank" ><img src="/static/img/github.jpg" /></a>
 				</div>
 			</div>
-			<div id="tagline">pay attention. things are happening</div>
 		</div>
 	</body>
 </html>
