--- a/site/static/css/newsbin.css
+++ b/site/static/css/newsbin.css
@@ -151,24 +151,23 @@ body {
 	background-color:white;
 }
 
-.title a {
-	color:black;
-	text-decoration: none;
-}
-
 .highlighted {
 	background-color:yellow;
 }
 
+.loader {
+	margin-left:auto;
+	margin-right:auto;
+	vertical-align: middle;
+	border: 5px solid #f3f3f3; /* Light grey */
+	border-top: 5px solid #3498db; /* Blue */
+	border-radius: 50%;
+	width: 20px;
+	height: 20px;
+	animation: spin 2s linear infinite;
+}
 
-/* -------------------------------------------------------------------------- */
-/* ANNOTATION */
-/* -------------------------------------------------------------------------- */
-
-div .summary {
-	max-height:100px;
-	padding:10px;
-	border: 1px solid black;
-	box-shadow: inset 1px 1px 5px rgba(0, 0, 0, 0.25);
-	overflow-y:scroll;
+@keyframes spin {
+	0% { transform: rotate(0deg); }
+	100% { transform: rotate(360deg); }
 }
