--- a/site/templates/article.html
+++ b/site/templates/article.html
@@ -6,119 +6,33 @@
 	</head>
 	<body>
 		<div id="container">
-			<form id="article" method="POST">
 
-				<input id="people_input" type="hidden" name="people">
-				<input type="hidden" name="id" value="{{ article.id }}">
+			<div id="notification"></div>
+
+			<div id="article" pk="{{ aritcle.id }}">
 
 				<div id="header">
-					<h1>{{ article.title }}</h1>
+					<span id="title">{{ article.title }}</span>
 					<span id="author">AUTHOR: {% if article.author %}{{ article.author }}{% else %}None{% endif %}</span>
 					<span id="publish_date">PUBLISHED: {{ article.publish_date }}</span>
 				</div>
 				<div id="content">
 					{{article.content|safe}}
 				</div>
-
-				<div id="people"></div>
+				<div id="people" string="{{ article.people }}"></div>
 				<div id="footer">
-					<span>ID: {{ article.id }}</span>
-					<span>SOURCE: {{ article.source }}</span>
-					<span>ORIGINAL: <a href="{{ article.link }}" target="_blank">link</a></span>
+					<span class="footer_items" id="id">ID: {{ article.id }}</span>
+					<span class="footer_items" id="source">SOURCE: {{ article.source }}</span>
+					<span class="footer_items" id="link">ORIGINAL: <a href="{{ article.link }}" target="_blank">link</a></span>
 				</div>
 			</div>
-		</form>
 
-		<div id="blackscreen">
-			<div id="summary-close">close</div>
-			<div id="summary-box">
-				<div id="summary-thumbnail">
-					THUMBNAIL
-				</div>
-				<div id="summary-content">
-					CONTENT
-				</div>
-			<div>
+			<div id="annotation"></div>
+
 		</div>
 
-		<script>
-			var people = "{{ article.people }}";
-			if (people){
-				people = people.split(';');
-			} else {
-				people = [];
-			}
-
-			var pk = "{{ article.id }}";
-			var scroll_bottom = "{{ scroll_bottom }}";
-
-			if(scroll_bottom){
-				document.body.scrollTop = document.body.scrollHeight;
-			}
-
-			var pcontainer = document.getElementById('people');
-			for(var i = 0; i < people.length; i++){
-				pcontainer.innerHTML += '<span class="name">' + people[i] + '<x-remove onmousedown="remove_handler( this )">&minus;</x-remove></span>';
-			}
-
-			document.getElementById('content').addEventListener('mouseup',select_handler);
-
-
-
-			// -----------------------------------------------------------------
-			// FUNCTIONS
-			function remove_handler( element ){
-				var parent = element.parentNode;
-				var gparent = parent.parentNode;
-
-				if(parent!=null&&gparent!=null){
-					parent.removeChild(element);
-					var name = parent.textContent;
-					var input = document.getElementById('people_input');
-					var article = document.getElementById('article');
-					var index = people.indexOf(name);
-					if( index >= 0 ){
-						people.splice( index, 1 );
-						var tmp = people.join(';');
-						input.value = tmp;
-						article.submit();
-					}
-				}
-			}
-
-			function select_handler( _event ) {
-				if( typeof(window.getSelection) != "undefined" ){
-					var selection = window.getSelection();
-					var range = selection.getRangeAt(0);
-
-					if( selection.rangeCount > 0 && !range.collapsed ) {
-						var text = range.toString();
-						if(text.length<50){
-							if(confirm('Do you want to add "' + text + '" as an annotation?')){
-								people.push(text);
-								tmp = people.join(';');
-								document.getElementById('people_input').value = tmp;
-								document.getElementById('article').submit();
-							}
-						}
-					}
-				}
-			}
-
-			function summary_requestor( element ){
-				var name = element.getAttribute('name');
-
-
-
-				document.getElementById('blackscreen').style.display = "flex";
-			}
-
-		</script>
-
-		<!--
-		<script src="/static/js/base/extend.js"></script>
-		<script src="/static/js/base/interface.js"></script>
-		<script src="/static/js/base/newsbin.js"></script>
-		<script src="/static/js/base/register.js"></script> -->
+		<script src="/static/js/extend.js"></script>
+		<script src="/static/js/interface.js"></script>
+		<script src="/static/js/article.js"></script>
 	</body>
 </html>
