--- a/site/static/css/article.css
+++ b/site/static/css/article.css
@@ -1,139 +1,280 @@
-/* -------------------------------------------------------------------------- */
-/* ARTICLE CONTENT MODAL*/
-/* -------------------------------------------------------------------------- */
+
+body {
+	padding:0;
+	margin:0;
+}
+
 #container {
+	width:100%;
+	height:100%;
 	display:flex;
-	justify-content: center;
+	align-items:center;
+	flex-direction:column;
+	position:relative;
 }
 
-#article {
-	max-width:980px;
+/* -------------------------------------------------------------------------- */
+/* ANNOTATE */
+/* -------------------------------------------------------------------------- */
+
+#annotate {
+	max-width:1000px;
 	padding:10px;
+	display:flex;
+	justify-content:center;
+	align-items:center;
+	height:30px;
+	width:100%;
+}
 
-	flex-grow:1;
+#annotate>input {
+	margin:0px 5px 0px 5px;
+}
 
-	text-align:left;
+#slider {
+	width:90px;
+	height:20px;
+	padding:1px;
+	margin:0px 5px 0px 5px;
+	line-height:18px;
+	border:1px solid black;
+	box-shadow: inset 0 0 5px rgba(0,0,0,0.5);
+	flex-shrink:0;
+	position:relative;
+	color:white;
+	background-color:#5ac469;
+}
+
+#toggle {
 	background-color:white;
-	box-shadow: 2px 2px 5px rgba(0, 0, 0, 0.5);
+	width:18px;
 	border:1px solid black;
-}
+	box-shadow: 1px 1px 2px rgba(0,0,0,0.25);
 
-#notification {
-	visibility: hidden;
-	background-color: white;
-	width:300px;
-	max-height:100%;
-	padding:10px;
-	margin-right: 20px;
-	border:1px solid black;
-}
-
-#notification>span {
-	border:1px solid grey;
 	cursor:pointer;
+	transition:margin-left 0.05s;
 	display:inline-block;
-	padding:3px;
-	text-align: center;
 }
 
-#annotation {
+#toggle::after {
+	content:"add";
+	position:absolute;
+	right:5px;
+}
+
+.slide {
+	margin-left:70px;
+}
+
+.slide::before {
+	content:"remove";
+	position:absolute;
+	left:5px;
+}
+
+.slide::after {
+	content:"" !important;
+}
+
+#name-input {
+	height:20px;
 	border:1px solid black;
-	visibility: hidden;
-	background-color: white;
-	width:300px;
+	width:100px;
+	flex-shrink:2;
+}
+
+#annotate-button {
+	background-color:white;
+	border:1px solid black;
+	height:24px;
+	cursor:pointer;
+}
+
+#type {
+	width:50px;
+	height:16px;
+	text-align:center;
+	border:1px dotted green;
+	flex-shrink:0;
+}
+
+.removing {
+	border:1px dotted red !important;
+}
+
+/* -------------------------------------------------------------------------- */
+/* SUMMARY */
+/* -------------------------------------------------------------------------- */
+#blackscreen {
+	/*display:none;*/
+	height:100%;
+	width:100%;
+	background-color:rgba(0,0,0,0.6);
+	position:fixed;
+	display:none;
+	justify-content:center;
+	align-items:center;
+	z-index:2;
+}
+
+#summary {
+	max-width:300px;
 	max-height:90%;
+	background-color:white;
 	padding:10px;
-	margin-left: 20px;
-	z-index: 2;
-	text-align: left;
-	overflow-y: scroll;
-}
-
-#article>#header {
-	padding:10px;
-	background-color: yellow;
-	border:1px solid black;
-}
-
-#article>#header>#title {
-	font-size:1.25em;
-}
-
-#article>#header>#author {
-}
-
-#article>#header>#publish_date {
-
-}
-
-#article>#content {
-	padding:10px;
-}
-
-#article>#people {
-	padding: 7px;
-	border:1px solid grey;
-}
-
-#article>#people>.name {
-	padding:2px;
-	border:1px solid lightgrey;
-	display:inline-block;
-	margin: 1px;
-}
-
-#article>#footer {
-	padding: 10px;
-}
-
-#article>#footer>#id {
-
-}
-
-#article>#footer>#source {
-
-}
-
-#article>#footer>#link {
-
-}
-
-.loader {
-	margin-left:auto;
-	margin-right:auto;
-	vertical-align: middle;
-	border: 5px solid #f3f3f3; /* Light grey */
-	border-top: 5px solid #3498db; /* Blue */
-	border-radius: 50%;
-	width: 20px;
-	height: 20px;
-	animation: spin 2s linear infinite;
-}
-
-@keyframes spin {
-	0% { transform: rotate(0deg); }
-	100% { transform: rotate(360deg); }
-}
-
-
-/* -------------------------------------------------------------------------- */
-/* ANNOTATION */
-/* -------------------------------------------------------------------------- */
-x-remove {
-	margin-left: 3px;
-	cursor:pointer;
-	color:red;
-}
-
-x-annotate {
-	background-color: #fff2cc;
-	cursor:pointer;
-}
-
-div .summary {
-	max-height:100px;
-	padding:10px;
-	border: 1px solid black;
-	box-shadow: inset 1px 1px 5px rgba(0, 0, 0, 0.25);
 	overflow-y:scroll;
+	display:flex;
+	align-items:center;
+	flex-direction:column;
+	box-shadow: 2px 2px 10px rgba(0,0,0,0.8);
+}
+
+#summary-image {
+	max-width:90%;
+}
+
+#summary-title {
+	font-size:1.5em;
+	font-weight:bold;
+	padding:10px 0px 10px 0px;
+}
+
+#summary-close, #summary-link {
+	display:block;
+	width:100%;
+	min-height:30px;
+	line-height:30px;
+	text-align:center;
+	cursor:pointer;
+	font-weight:bold;
+}
+
+#summary-close {
+	transition:background-color 0.25s;
+}
+
+#summary-link {
+	text-align:right;
+	width:90%;
+	color:black;
+	text-decoration:none;
+	background: linear-gradient(to right, white , lightgrey);
+}
+
+#summary-link>div {
+	height:20px;
+	width:20px;
+	background-color:lightgrey;
+	transform:rotate(45deg);
+	display:inline-block;
+	margin-left:10px;
+	margin-right:-10px;
+	margin-bottom:-5px;
+}
+
+#summary-close:hover {
+	background-color:#e86a6a;
+}
+
+#summary-content {
+	padding:10px;
+}
+
+/* -------------------------------------------------------------------------- */
+/* ARTICLE */
+/* -------------------------------------------------------------------------- */
+#article {
+	max-width:1000px;
+	padding:10px;
+	box-shadow: 2px 2px 5px rgba(0,0,0,0.5);
+}
+
+/* -------------------------------------------------------------------------- */
+/* TITLE */
+/* -------------------------------------------------------------------------- */
+#title {
+	padding: 10px 0px 10px 0px;
+	font-size:1.75em;
+	text-align:center;
+	background-color:yellow;
+	border:1px solid lightgrey;
+}
+
+/* -------------------------------------------------------------------------- */
+/* HEADER */
+/* -------------------------------------------------------------------------- */
+#header>span {
+	display:inline-block;
+}
+
+#author {
+	font-size:0.8em;
+}
+
+#author::before {
+	content:'author: ';
+	font-weight:bold;
+}
+
+#publish_date {
+	font-size:0.8em;
+}
+
+#publish_date::before {
+	content:'published: ';
+	font-weight:bold;
+}
+
+/* -------------------------------------------------------------------------- */
+/* CONTENT */
+/* -------------------------------------------------------------------------- */
+#content {
+}
+
+/* -------------------------------------------------------------------------- */
+/* PEOPLE */
+/* -------------------------------------------------------------------------- */
+#people {
+	width:100%;
+	padding:5px 0px 5px 0px;
+	border:1px solid lightgrey;
+}
+
+.name::after {
+	content:",";
+}
+
+.annotation {
+	background-color: yellow;
+	cursor:pointer;
+}
+
+/* -------------------------------------------------------------------------- */
+/* FOOTER */
+/* -------------------------------------------------------------------------- */
+#footer {
+	padding: 5px 0px 5px 0px;
+}
+
+#footer>span {
+	display:inline-block;
+}
+
+#id, #source, #link {
+	font-size:0.8em;
+}
+
+#id::before {
+	content:'id: ';
+	font-weight:bold;
+}
+
+#source::before {
+	content:'source: ';
+	font-weight:bold;
+}
+
+#link::before {
+	content:'link: ';
+	font-weight:bold;
 }
