--- a/site/templates/about.html
+++ b/site/templates/about.html
@@ -2,7 +2,7 @@
 <html>
 	<head>
 		<title>newsbin - about</title>
-		<link rel="stylesheet" type="text/css" href="/static/css/base/about.css" />
+		<link rel="stylesheet" type="text/css" href="/static/css/about.css" />
 	</head>
 	<body>
 		<div id="content">
