--- a/site/static/css/article.css
+++ b/site/static/css/article.css
@@ -130,7 +130,8 @@ body {
 }
 
 #summary-image {
-	max-width:90%;
+	width:90%;
+	height:auto;
 }
 
 #summary-title {
@@ -156,15 +157,15 @@ body {
 #summary-link {
 	text-align:right;
 	width:90%;
-	color:black;
+	color:white;
 	text-decoration:none;
-	background: linear-gradient(to right, white , lightgrey);
+	background: linear-gradient(to right, white , grey);
 }
 
 #summary-link>div {
 	height:20px;
 	width:20px;
-	background-color:lightgrey;
+	background-color:grey;
 	transform:rotate(45deg);
 	display:inline-block;
 	margin-left:10px;
@@ -198,6 +199,7 @@ body {
 	text-align:center;
 	background-color:yellow;
 	border:1px solid lightgrey;
+	margin-bottom:15px;
 }
 
 /* -------------------------------------------------------------------------- */
@@ -232,12 +234,23 @@ body {
 }
 
 /* -------------------------------------------------------------------------- */
-/* PEOPLE */
+/* BLACKLIST */
 /* -------------------------------------------------------------------------- */
-#people {
+#blacklist-block {
+	width:100%;
+	display:flex;
+	align-items: center;
+}
+
+#blacklist {
 	width:100%;
 	padding:5px 0px 5px 0px;
 	border:1px solid lightgrey;
+	flex-grow:5;
+}
+
+.name {
+	margin-left:5px;
 }
 
 .name::after {
