--- a/site/templates/about.html
+++ b/site/templates/about.html
@@ -9,17 +9,21 @@
 			<a href="/" id="back_link"><div id="back">Back</div></a>
 			<h1>welcome to newbin</h1>
 			<p>
-				This site fetches articles from a lot of different news sources, detects proper names in them, and tries to
-				annotate the articles with information about the people and places being discusses. What this means is that you can
-				click on names in the news and get immediate information about them in a sidebar.
+ 				This site fetches articles from a lot of different news sources and tries to
+				annotate the articles with information about the people and places being discussed.
+				What this means is that you can click on names in the articles and get immediate
+				information in a small window.
 			</p>
 			<p>
-				If you see an annotation that is wrong, scroll to the bottom of the article and click the red minus-sign next
-				to it. If you see an annotation that should be included, highlight it in the text and click yes on the notification.
+				On the front page you can select your sources, the number of results to return or
+				search titles and content with vanilla or <a href="http://pythex.org/" target="_blank">regex</a>
+				searches. Clicking any of the titles will take you to the article itself.
 			</p>
 			<p>
-				You can select your sources, the number of results to return or search titles and content with plain string
-				or <a href="http://pythex.org/" target="_blank">regex</a> searches from the front page. <br/>Enjoy.
+				If you see an annotation that's wrong, copy and paste the highlighted text into the
+				input bar at the top of the article, flip the switch to 'remove' and submit. If you
+				want to add an annotation that doesn't exist, copy text into the input bar, flip to
+				'add' and hit the go button.
 			</p>
 			<p style="text-align:right;font-size:1.2em;">
 				- blackstampede
