pre-deploy commit

--- a/site/templates/index.html
+++ b/site/templates/index.html
@@ -59,8 +59,8 @@
 
 				<div class="block">
 					<div id="information">
-						<a href="/about">about</a> |
-						<a href="/log" target="_blank">log</a>
+						<a href="/about">about</a><!-- |
+						<a href="/log" target="_blank">log</a>-->
 					</div>
 				</div>
 
