--- a/site/static/css/newsbin.css
+++ b/site/static/css/newsbin.css
@@ -26,6 +26,13 @@ body {
 	padding-bottom:10px;
 
 	text-align:center;
+	display: flex;
+	flex-wrap: wrap;
+}
+
+#sources-block {
+	display:flex;
+	align-items:center;
 }
 
 .block {
